frame/support/test/tests/pallet_ui/inherent_invalid_item.stderr
error: Invalid pallet::inherent, expect impl<..> ProvideInherent for Pallet<..>
  --> $DIR/inherent_invalid_item.rs:19:2
   |
19 |     impl Foo {}
   |     ^^^^
